Add favicon to project and update link tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <title>POLAR &#45; FOSSGIS 2024</title>
-  <link rel="icon" href="https://github.com/Dataport/polar/blob/905e6360e1be5d268aa74738526df1b3c0ee3405/pages/assets/iceberg_icon.svg">
+  <link rel="icon" href="./iceberg.svg">
   <style>
     html, body {
       padding: 0;
